Correct lack of momentum scrolling on iOS for the list of lists.

--- a/resources/public/toto.css
+++ b/resources/public/toto.css
@@ -34,7 +34,8 @@ div#sidebar {
 
     background: white;
 
-    overflow-y: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     
     box-shadow: 2px 2px 2px #e0e0e0;
 
